# Score

./: .gitignore  LLVM_object_file  README.md  Score.opam  Score.opam.locked  dune-project  example.scr  gen-cland.earl  run.earl
lib/: ast.ml  ast.mli  codegen.ml  codegen.mli  dune  emit.ml  emit.mli  err.ml  err.mli  ir.ml  ir.mli  lexer.ml  lexer.mli  main.ml  module.ml  module.mli  parser.ml  parser.mli  preprocessor.ml  preprocessor.mli  proc.ml  scope.ml  scope.mli  token.ml  token.mli  types.ml  types.mli  utils.ml  utils.mli
llvm-testing/: build.earl  build.sh  input.ll  input.s  main.bc  main.ll  main.s
src/: .input.scr.swp  ast.ml  ast.mli  build.earl  build.sh  clean.sh  codegen.cxx  emit.ml  emit.mli  err.cxx  err.ml  err.mli  example.scr  gen.ml  gen.mli  grammar.cxx  il.ml  il.mli  input2.scr  ir.ml  ir.mli  ir2.ml  ir2.mli  lexer.cxx  lexer.ml  lexer.mli  main.cxx  main.ml  main.scr  opcode.ml  opcode.mli  out.ssa  parser.cxx  parser.ml  parser.mli  preprocessor.ml  proc.ml  proc.mli  scope.ml  scope.mli  (+13 more)
src/editors/: qbe-mode.el  score-mode.el
src/examples/: __import_file.scr  arrays.scr  hello-world.scr  imports.scr  loops.scr  macros.scr  procs-and-conds.scr  ptrs.scr  strs.scr  types.test.scr  vars.scr
src/include/: codegen.hxx  common.hxx  err.hxx  grammar.hxx  lexer.hxx  parser.hxx  scope.hxx  token.hxx  types.hxx  utils.hxx
src/std/: char.scr  std.scr  std.scr.ssa  str.scr
src/stdlib/: str.scr
src/tests/: arrays-char.test.scr  arrays-i32.test.scr  arrays-str.test.scr  (+22 more)
std/: char.scr  glibc.scr  std.scr  str.scr
test/: dune
