(lang dune 3.14)

(name Score)

(generate_opam_files true)

(source
 (github malloc-nbytes/Score))

(authors "Zachary Haskins")

(maintainers "Zachary Haskins")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name Score)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
